[gd_scene load_steps=22 format=3 uid="uid://cu58qskjjpy6u"]

[ext_resource type="Script" uid="uid://4hkkxi4j7be7" path="res://scenes/enemies/bug404/bug404.gd" id="1_er51f"]
[ext_resource type="Texture2D" uid="uid://7y8f4p3d2uon" path="res://assets/mobs/Mob2-W-10.svg" id="2_3nad1"]
[ext_resource type="Texture2D" uid="uid://dpnn17su6x7ct" path="res://assets/dead/Mob2-W-Explosion-1.svg" id="2_jk7g0"]
[ext_resource type="Texture2D" uid="uid://bytd2uue6ib1t" path="res://assets/mobs/Mob2-W-20.svg" id="3_drxiy"]
[ext_resource type="Texture2D" uid="uid://dckwb21yoksk5" path="res://assets/dead/Mob2-W-Explosion-2.svg" id="3_oq32f"]
[ext_resource type="Texture2D" uid="uid://ctnaoj0k638u8" path="res://assets/mobs/Mob2-E-10.svg" id="4_75ebb"]
[ext_resource type="Texture2D" uid="uid://bh8j6gywy74n0" path="res://assets/dead/Explosion-3.svg" id="4_f65fm"]
[ext_resource type="Texture2D" uid="uid://hj7ji4baxbkv" path="res://assets/dead/Explosion-4.svg" id="5_c4mwu"]
[ext_resource type="Texture2D" uid="uid://cbbn7x44j81f8" path="res://assets/mobs/Mob2-E-20.svg" id="5_c6tck"]
[ext_resource type="Texture2D" uid="uid://bbymu0dl3l6es" path="res://assets/dead/Explosion-5.svg" id="6_dujc5"]
[ext_resource type="Texture2D" uid="uid://c47xggff0dfdy" path="res://assets/dead/Explosion-6.svg" id="7_vjdfq"]
[ext_resource type="Texture2D" uid="uid://c0pqd66yvr5j1" path="res://assets/dead/Explosion-7.svg" id="8_eh10v"]
[ext_resource type="Texture2D" uid="uid://b5483fxu483l" path="res://assets/dead/Mob2-W-Explosion-1_1.svg" id="9_p5u6k"]
[ext_resource type="Texture2D" uid="uid://beh1f73npnrs8" path="res://assets/dead/Mob2-E-Explosion-2.svg" id="10_t02x8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a3pup"]
radius = 46.0109

[sub_resource type="CircleShape2D" id="CircleShape2D_40wdo"]
radius = 56.0089

[sub_resource type="AtlasTexture" id="AtlasTexture_b6002"]
atlas = ExtResource("2_3nad1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2syh"]
atlas = ExtResource("3_drxiy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx4kc"]
atlas = ExtResource("4_75ebb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_os43r"]
atlas = ExtResource("5_c6tck")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ytu1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jk7g0")
}, {
"duration": 1.0,
"texture": ExtResource("3_oq32f")
}, {
"duration": 1.0,
"texture": ExtResource("4_f65fm")
}, {
"duration": 1.0,
"texture": ExtResource("5_c4mwu")
}, {
"duration": 1.0,
"texture": ExtResource("6_dujc5")
}, {
"duration": 1.0,
"texture": ExtResource("7_vjdfq")
}, {
"duration": 1.0,
"texture": ExtResource("8_eh10v")
}],
"loop": true,
"name": &"DestroyLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_p5u6k")
}, {
"duration": 1.0,
"texture": ExtResource("10_t02x8")
}, {
"duration": 1.0,
"texture": ExtResource("4_f65fm")
}, {
"duration": 1.0,
"texture": ExtResource("5_c4mwu")
}, {
"duration": 1.0,
"texture": ExtResource("6_dujc5")
}, {
"duration": 1.0,
"texture": ExtResource("7_vjdfq")
}, {
"duration": 1.0,
"texture": ExtResource("8_eh10v")
}],
"loop": true,
"name": &"DestroyRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6002")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2syh")
}],
"loop": true,
"name": &"WalkLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx4kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os43r")
}],
"loop": true,
"name": &"WalkRight",
"speed": 5.0
}]

[node name="404Bug" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_er51f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a3pup")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_40wdo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, -2)
sprite_frames = SubResource("SpriteFrames_7ytu1")
animation = &"DestroyRight"

[node name="ShootingPoint" type="Marker2D" parent="."]
position = Vector2(-70, -2)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
